// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eslint Package transformer should work with child packages 1`] = `
{
  "devDependencies": {
    "eslint": "^8.23.0",
    "eslint-config-prettier": "^8.5.0",
    "eslint-plugin-prettier": "^4.2.1",
    "prettier": "^2.7.1",
  },
  "eslintConfig": {
    "env": {
      "es6": true,
      "jest": true,
      "mocha": true,
      "node": true,
    },
    "extends": [
      "eslint:recommended",
      "plugin:prettier/recommended",
    ],
    "parserOptions": {
      "ecmaVersion": 2018,
      "modules": true,
      "sourceType": "script",
    },
    "plugins": [
      "prettier",
    ],
    "rules": {
      "prettier/prettier": "error",
    },
  },
  "metapak": {
    "data": {
      "childPackage": true,
      "files": "src/*.js src/**/*.js",
    },
  },
  "prettier": {
    "printWidth": 80,
    "proseWrap": "always",
    "semi": true,
    "singleQuote": true,
    "trailingComma": "all",
  },
  "scripts": {
    "lint": "eslint src/*.js src/**/*.js",
    "prettier": "prettier --write src/*.js src/**/*.js",
  },
}
`;

exports[`eslint Package transformer should work with some files 1`] = `
{
  "devDependencies": {
    "eslint": "^8.23.0",
    "eslint-config-prettier": "^8.5.0",
    "eslint-plugin-prettier": "^4.2.1",
    "prettier": "^2.7.1",
  },
  "eslintConfig": {
    "env": {
      "es6": true,
      "jest": true,
      "mocha": true,
      "node": true,
    },
    "extends": [
      "eslint:recommended",
      "plugin:prettier/recommended",
    ],
    "parserOptions": {
      "ecmaVersion": 2018,
      "modules": true,
      "sourceType": "script",
    },
    "plugins": [
      "prettier",
    ],
    "rules": {
      "prettier/prettier": "error",
    },
  },
  "greenkeeper": {
    "ignore": [
      "eslint",
      "eslint-config-prettier",
      "eslint-plugin-prettier",
      "prettier",
    ],
  },
  "metapak": {
    "data": {
      "files": "src/*.js src/**/*.js",
    },
  },
  "prettier": {
    "printWidth": 80,
    "proseWrap": "always",
    "semi": true,
    "singleQuote": true,
    "trailingComma": "all",
  },
  "scripts": {
    "lint": "eslint src/*.js src/**/*.js",
    "prettier": "prettier --write src/*.js src/**/*.js",
  },
}
`;

exports[`eslint Package transformer should work with typescript configs 1`] = `
{
  "devDependencies": {
    "@typescript-eslint/eslint-plugin": "^5.36.0",
    "@typescript-eslint/parser": "^5.36.0",
    "eslint": "^8.23.0",
    "eslint-config-prettier": "^8.5.0",
    "eslint-plugin-prettier": "^4.2.1",
    "prettier": "^2.7.1",
  },
  "eslintConfig": {
    "env": {
      "es6": true,
      "jest": true,
      "mocha": true,
      "node": true,
    },
    "extends": [
      "eslint:recommended",
      "plugin:prettier/recommended",
      "plugin:@typescript-eslint/eslint-recommended",
      "plugin:@typescript-eslint/recommended",
    ],
    "ignorePatterns": [
      "*.d.ts",
    ],
    "parser": "@typescript-eslint/parser",
    "parserOptions": {
      "ecmaVersion": 2018,
      "modules": true,
      "sourceType": "script",
    },
    "plugins": [
      "prettier",
    ],
    "rules": {
      "prettier/prettier": "error",
    },
  },
  "metapak": {
    "configs": [
      "typescript",
    ],
    "data": {
      "childPackage": true,
      "files": "src/*.js src/**/*.js",
    },
  },
  "prettier": {
    "printWidth": 80,
    "proseWrap": "always",
    "semi": true,
    "singleQuote": true,
    "trailingComma": "all",
  },
  "scripts": {
    "lint": "eslint src/*.js src/**/*.js",
    "prettier": "prettier --write src/*.js src/**/*.js",
  },
}
`;
